Support var-args parameter on setters too (#187)